2002-04-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_EXEEXT (obsolete).

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-01-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* config.h.in: Automatically generated.  Remove from CVS.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to GNU-canonicalized autoconf macros.

2000-08-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* multigen: Fix BARE_CPU_CFLAGS.

2000-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* multigen: Fix usage.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.