@@ -14,7 +14,7 @@ packhex_SOURCES = packhex.c
 unhex_SOURCES = unhex.c
 binpatch_SOURCES = binpatch.c
 
-bin_SCRIPTS = install-if-change lock-directory unlock-directory
+bin_SCRIPTS = install-if-change
 
 noinst_SCRIPTS = search-id.sh multigen
 
