@@ -1,43 +1,0 @@
-#!@KSH@
-#
-# $Id$
-#
-# Make a directory write protected
-# Used to write protect the install point after a build
-# to prevent inadvertant overwriting.
-#
-
-# is a particular command available on this machine?
-#
-cmd_avail()
-{
-    set -- `type $1 2>&1`
-    if [ "$2" = "not" -a "$3" = "found" ] || [ "$3" = "not" -a "$4" = "found" ]
-    then
-        return 1
-    else
-        return 0
-    fi
-}
-
-lock_directory() {
-    l_dir=$1/.			# get any symlink out of the way using '.'
-    if [ -d $l_dir ]
-    then
-        find $l_dir -type d -perm -0200 -print | $XARGS chmod -w
-    fi
-}
-
-# Use gnu xargs if available; faster, more reliable in general
-XARGS=xargs
-cmd_avail gxargs && XARGS=gxargs
-
-for dir
-do
-    lock_directory $dir
-done
-
-# Local Variables: ***
-# mode:ksh ***
-# End: ***
-
