@@ -1,3 +1,8 @@
+2002-05-01	Joel Sherrill <joel@OARcorp.com>
+
+	* lock-directory.in, unlock-directory.in: Removed.
+	* Makefile.am, README, .cvsignore: Updated to reflect above.
+
 2002-04-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* configure.ac: Remove AC_EXEEXT (obsolete).
